--- a/catalogo.html
+++ b/catalogo.html
@@ -231,8 +231,8 @@
                     <option value="Sabor 3">Blueberry Mint <span class="en-stock">(En stock)</span></option>
                     <option value="Sabor 4">Blueberry Raspberry <span class="en-stock">(En stock)</span></option>
                     <option value="Sabor 5">Strawberry Ice <span class="en-stock">(En stock)</span></option>
-                    <option value="Sabor 6">Strawberry Kiwi<span class="en-stock">(En stock)</span></option>
-                    <option value="Sabor 7">Watermelon Bubble Gum <span class="en-stock">(En stock)</span></option>
+                    <option value="Sabor 6">Strawberry Kiwi<span class="en-stock">(3)</span></option>
+                    <option value="Sabor 7">Watermelon Bubble Gum <span class="en-stock">(2)</span></option>
                     <option value="Sabor 8">Watermelon Ice <span class="en-stock">(En stock)</span></option>
                     <option value="Sabor 9">Strawberry Watermelon <span class="en-stock">(En stock)</span></option>
                 </select>
