--- a/catalogo.html
+++ b/catalogo.html
@@ -226,13 +226,13 @@
             <div>
                 <label for="sabor3">Sabor:</label>
                 <select id="sabor3" name="sabor3">
-                    <option value="Sabor 1">Grape Ice <span class="en-stock">(En stock)</span></option>
+                    <option value="Sabor 1">Grape Ice <span class="en-stock">(3)</span></option>
                     <option value="Sabor 2">Mix Fruit <span class="en-stock">(En stock)</span></option>
                     <option value="Sabor 3">Blueberry Mint <span class="en-stock">(En stock)</span></option>
                     <option value="Sabor 4">Blueberry Raspberry <span class="en-stock">(En stock)</span></option>
                     <option value="Sabor 5">Strawberry Ice <span class="en-stock">(En stock)</span></option>
-                    <option value="Sabor 6">Strawberry Kiwi<span class="en-stock">(3)</span></option>
-                    <option value="Sabor 7">Watermelon Bubble Gum <span class="en-stock">(2)</span></option>
+                    <option value="Sabor 6">Strawberry Kiwi<span class="en-stock">(2)</span></option>
+                    <option value="Sabor 7">Watermelon Bubble Gum <span class="en-stock">(1)</span></option>
                     <option value="Sabor 8">Watermelon Ice <span class="en-stock">(En stock)</span></option>
                     <option value="Sabor 9">Strawberry Watermelon <span class="en-stock">(En stock)</span></option>
                 </select>
