--- a/catalogo.html
+++ b/catalogo.html
@@ -248,7 +248,7 @@
             <!-- Imagen centrada con flechas -->
             <div class="flechas">
                 <span class="flecha izquierda" onclick="cambiarImagen('producto4', -1)">&#9664;</span>
-                <img class="imagen-producto" id="producto4" src="producto4.jpg" alt="Imagen de producto 4">
+                <img class="imagen-producto" id="producto4" src="2-1-2.jpg" alt="Imagen de producto 4">
                 <span class="flecha derecha" onclick="cambiarImagen('producto4', 1)">&#9654;</span>
             </div>
             <!-- Opciones de selección -->
