--- a/catalogo.html
+++ b/catalogo.html
@@ -285,7 +285,7 @@
         const imagenesProducto1 = ["nuevo.jpg", "azul.jpg", "melocoton.jpg", "morado.jpg", "verde.jpg"];
         const imagenesProducto2 = ["negro.jpg", "neon.jpg", "amarillo morado.jpg", "gris.jpg"];
         const imagenesProducto3 = ["principal.jpg.JPG", "strawberry kiwi.jpg", "uva.jpg"];
-        const imagenesProducto4 = ["2-1-2.jpg", "3-4-5.jpg"];
+        const imagenesProducto4 = ["2-1-2.jpg", "3-4-5.jpeg"];
 
         let indiceProducto1 = 0;
         let indiceProducto2 = 0;
