--- a/politica de devolucion/politica-devolucion.html
+++ b/politica de devolucion/politica-devolucion.html
@@ -14,22 +14,25 @@
     <main>
         <section class="refund-policy">
             <p>
-                En caso de quemada, ofrecemos un 50% de descuento en la compra de un nuevo dispositivo del mismo modelo. Este descuento será aplicable siempre y cuando el daño sea visible y comprobable.
+                En caso de quemada, ofrecemos un 50% de descuento en la compra de un nuevo dispositivo del mismo modelo. Este descuento será aplicable siempre y cuando el daño sea visible y comprobable. El dispositivo defectuoso debe ser devuelto para su evaluación antes de que se aplique el descuento.
             </p>
             <p>
                 Si el producto sigue funcionando pero presenta un funcionamiento defectuoso, como una batería que no carga adecuadamente o problemas con la liberación de líquido, ofrecemos un 25% de descuento en la compra de un nuevo dispositivo. El dispositivo defectuoso debe ser devuelto para su evaluación antes de que se aplique el descuento.
             </p>
             <p>
-                Si el producto no funciona en absoluto desde el primer uso, ofrecemos un 100% de descuento en la compra de un nuevo dispositivo del mismo modelo, siempre y cuando el dispositivo no haya sido manipulado o dañado intencionalmente.
+                Si el producto no funciona en absoluto desde el primer uso, ofrecemos un 100% de descuento en la compra de un nuevo dispositivo del mismo modelo, siempre y cuando el dispositivo no haya sido manipulado o dañado intencionalmente. El dispositivo defectuoso debe ser devuelto para su evaluación antes de que se aplique el descuento.
             </p>
             <p>
                 Es importante que el artículo sea devuelto en su embalaje original y que haya sido comprado directamente a través de nosotros. Para procesar una devolución, por favor, contacta con nuestro servicio de atención al cliente dentro de una semana desde la fecha de compra. No se aceptarán devoluciones después de este plazo.
             </p>
             <p>
-                Recuerda que el proceso de devolución puede tardar hasta 10 días hábiles desde el momento en que recibamos el producto. Los costos de envío para la devolución correrán por cuenta del cliente, salvo en casos de productos completamente defectuosos desde el primer uso, en cuyo caso cubriremos los costos de envío.
+                Recuerda que el proceso de devolución puede tardar hasta 1 dia hábiles desde el momento en que recibamos el producto. Los costos de envío para la devolución correrán por cuenta del cliente.
             </p>
             <p>
-                Para iniciar una devolución, por favor, contacta con nosotros a través de nuestro correo electrónico o número de teléfono, proporcionando el número de pedido y una descripción del problema que has experimentado con el dispositivo.
+                Para iniciar una devolución, por favor, contacta con nosotros a través de nuestro instagram @vapeemporium._ , proporcionando una descripción del problema que has experimentado con el dispositivo.
+            </p>
+            <p>
+                Todas las devoluciones tendran garantia si se hace caso a las recomendaciones del dispositivo 
             </p>
         </section>
     </main>
