--- a/politica de devolucion/30000.html
+++ b/politica de devolucion/30000.html
@@ -14,12 +14,12 @@
     <main>
         <section class="product-info">
             <ul>
-                <li>No utilizar mientras se carga.</li>
-                <li>No usar adaptadores de carga rápida; usa adaptadores de 5W.</li>
-                <li>Si llega al 100%, no lo dejes cargando durante mucho tiempo (no lo dejes toda la noche).</li>
-                <li>Al girar la boquilla, sabrá a un sabor y si la giras, sabrá al otro.</li>
-                <li>Los vapers son de 30,000 caladas, pero cada sabor dispone de 15,000 cada uno.</li>
-                <li>En la pantalla, podrás ver el nivel de batería.</li>
+                <li>🚫No utilizar mientras se carga.</li>
+                <li>⚡️No usar adaptadores de carga rápida; usa adaptadores de 5W.</li>
+                <li>⏳Si llega al 100%, no lo dejes cargando durante mucho tiempo (no lo dejes toda la noche).</li>
+                <li>🔁Al girar la boquilla, sabrá a un sabor y si la giras, sabrá al otro.</li>
+                <li>💨Los vapers son de 30,000 caladas, pero cada sabor dispone de 15,000 cada uno.</li>
+                <li>📊En la pantalla, podrás ver el nivel de batería.</li>
             </ul>
             <a href="politica-devolucion.html" class="small-button">Política de Devolución</a>
         </section>
