--- a/politica de devolucion/20000.html
+++ b/politica de devolucion/20000.html
@@ -14,12 +14,12 @@
     <main>
         <section class="product-info">
             <ul>
-                <li>No utilizar mientras se carga.</li>
-                <li>No usar adaptadores de carga rápida; usa adaptadores de 5W.</li>
-                <li>Si llega al 100%, no lo dejes cargando durante mucho tiempo (no lo dejes toda la noche).</li>
-                <li>En la pantalla, el porcentaje superior es la batería.</li>
-                <li>El porcentaje de abajo es el nivel de líquido.</li>
-                <li>En la parte inferior, hay un botón que, si lo mueves, puedes controlar el aire que entra.</li>
+                <li>🚫No utilizar mientras se carga.</li>
+                <li>⚡️No usar adaptadores de carga rápida; usa adaptadores de 5W.</li>
+                <li>⏳Si llega al 100%, no lo dejes cargando durante mucho tiempo (no lo dejes toda la noche).</li>
+                <li>📊En la pantalla, el porcentaje superior es la batería.</li>
+                <li>📊El porcentaje de abajo es el nivel de líquido.</li>
+                <li>🔁En la parte inferior, hay un botón que, si lo mueves, puedes controlar el aire que entra.</li>
             </ul>
             <a href="politica-devolucion.html" class="small-button">Política de Devolución</a>
         </section>
